# bot

./: .env.dist  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
infrastructure/database/models/: users.py
infrastructure/database/repo/: users.py
tgbot/: config.py
tgbot/dialogs/: __init__.py
tgbot/dialogs/events/: user.py
tgbot/dialogs/getters/: user.py
tgbot/dialogs/states/: user.py
tgbot/dialogs/windows/user/: menu.py
tgbot/handlers/: __init__.py  admin.py  admin_vpn.py  channel.py  deeplinks.py  inline.py  user.py  user_vpn.py  vpn.py
tgbot/handlers/admin/: __init__.py  admin.py
tgbot/handlers/channel/: __init__.py  channel.py
tgbot/handlers/group/: __init__.py  group.py
tgbot/handlers/inline/: __init__.py  inline.py
tgbot/handlers/users/: __init__.py  salary.py  user.py  vpn.py
tgbot/keyboards/: inline.py
tgbot/keyboards/admin/: inline.py
tgbot/keyboards/user/: inline.py  salary.py
tgbot/middlewares/: access.py  database.py
tgbot/misc/: algolia.py  salary.py  states.py
