[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.24.0",
    "aiogram-dialog>=2.4.0",
    "asyncpg>=0.31.0",
    "betterlogging>=1.0.0",
    "environs>=14.5.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
]
